# jax-cpo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
jax_cpo/: __init__.py  config.py  configs.yaml  cpo.py  episode_sampling.py  episodic_async_env.py  episodic_trajectory_buffer.py  logging.py  models.py  nets.py  trainer.py  transition.py  utils.py  wrapppers.py
jax_cpo/benchmark_suites/: __init__.py  utils.py
jax_cpo/benchmark_suites/dm_control/: __init__.py
jax_cpo/benchmark_suites/safe_adaptation_gym/: __init__.py
jax_cpo/configs/: config.yaml
jax_cpo/configs/environment/: dm_cartpole.yaml  safe_adaptation_gym.yaml
jax_cpo/configs/experiment/: debug.yaml  point_go_to_goal.yaml
jax_cpo/configs/hydra/launcher/: slurm.yaml
jax_cpo/rl/: acting.py  episodic_async_env.py  epoch_summary.py  learner.py  logging.py  metrics.py  trainer.py  trajectory.py  types.py  utils.py  wrappers.py
tests/: test_cpo.py
